// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`edit-shoe.vue brands should return the value from store 1`] = `
Array [
  Object {
    "brand": "Foo",
    "id": 0,
  },
]
`;

exports[`edit-shoe.vue editShoe should call action 1`] = `
Object {
  "brandId": 0,
  "id": 1,
  "product": "Test",
  "typeId": 1,
}
`;

exports[`edit-shoe.vue getBrandDisplayValue should return correct value 1`] = `"Bar"`;

exports[`edit-shoe.vue getShoe should return the value of text input 1`] = `
Object {
  "brandId": 0,
  "id": 1,
  "product": "Test",
  "typeId": 0,
}
`;

exports[`edit-shoe.vue getTypeDisplayValue should return correct value 1`] = `"Bar"`;

exports[`edit-shoe.vue meta.status is false should match snapshot when page loaded 1`] = `
<div
  class="container"
>
  <div
    class="row"
  >
    <div
      class="col-sm col-lg-6"
    >
      <h2>
        Edit Shoe
      </h2>
       
      <form>
        <div
          class="form-group"
        >
          <label>
            Type
          </label>
           
          <dropdown-stub
            data="[object Object]"
            event="select-type"
            getdisplayvalue="function () { [native code] }"
            placeholder="Select Type"
          />
        </div>
         
        <div
          class="form-group"
        >
          <label>
            Brand Name
          </label>
           
          <dropdown-stub
            data="[object Object]"
            event="select-brand"
            getdisplayvalue="function () { [native code] }"
            placeholder="Select Brand"
          />
        </div>
         
        <div
          class="form-group"
        >
          <label
            for="productName"
          >
            Product Name
          </label>
           
          <input
            class="form-control form-control-lg shadow border border-primary"
            id="productName"
            placeholder="Product Name"
            type="text"
          />
        </div>
         
        <button
          class="btn btn-primary btn-lg btn-block shadow"
          disabled="disabled"
          id="save"
          type="submit"
        >
          
                    Save
                
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`edit-shoe.vue meta.status is true should match snapshot when page loaded 1`] = `
<div
  class="container"
>
  <div
    class="row"
  >
    <div
      class="col-sm col-lg-6"
    >
      <h2>
        Edit Shoe
      </h2>
       
      <form>
        <div
          class="form-group"
        >
          <label>
            Type
          </label>
           
          <dropdown-stub
            data="[object Object]"
            event="select-type"
            getdisplayvalue="function () { [native code] }"
            placeholder="Select Type"
          />
        </div>
         
        <div
          class="form-group"
        >
          <label>
            Brand Name
          </label>
           
          <dropdown-stub
            data="[object Object]"
            event="select-brand"
            getdisplayvalue="function () { [native code] }"
            placeholder="Select Brand"
          />
        </div>
         
        <div
          class="form-group"
        >
          <label
            for="productName"
          >
            Product Name
          </label>
           
          <input
            class="form-control form-control-lg shadow border border-primary"
            id="productName"
            placeholder="Product Name"
            type="text"
          />
        </div>
         
        <button
          class="btn btn-primary btn-lg btn-block shadow"
          disabled="disabled"
          id="save"
          type="submit"
        >
          
                    Save
                
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`edit-shoe.vue selectBrand should set selectedBrand 1`] = `
Object {
  "brand": "Foo",
  "id": 0,
}
`;

exports[`edit-shoe.vue selectType should set selectedType 1`] = `
Object {
  "id": 1,
  "type": "Bar",
}
`;

exports[`edit-shoe.vue should match snapshot when text input changed 1`] = `
<div
  class="container"
>
  <div
    class="row"
  >
    <div
      class="col-sm col-lg-6"
    >
      <h2>
        Edit Shoe
      </h2>
       
      <form>
        <div
          class="form-group"
        >
          <label>
            Type
          </label>
           
          <dropdown-stub
            data="[object Object]"
            event="select-type"
            getdisplayvalue="function () { [native code] }"
            placeholder="Select Type"
          />
        </div>
         
        <div
          class="form-group"
        >
          <label>
            Brand Name
          </label>
           
          <dropdown-stub
            data="[object Object]"
            event="select-brand"
            getdisplayvalue="function () { [native code] }"
            placeholder="Select Brand"
          />
        </div>
         
        <div
          class="form-group"
        >
          <label
            for="productName"
          >
            Product Name
          </label>
           
          <input
            class="form-control form-control-lg shadow border border-primary"
            id="productName"
            placeholder="Product Name"
            type="text"
          />
        </div>
         
        <button
          class="btn btn-primary btn-lg btn-block shadow"
          disabled="disabled"
          id="save"
          type="submit"
        >
          
                    Save
                
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`edit-shoe.vue types should return the value from store 1`] = `
Array [
  Object {
    "id": 0,
    "type": "Foo",
  },
]
`;
